[gd_scene format=3 uid="uid://diauw22k8wfft"]

[ext_resource type="Script" uid="uid://4060l32efinc" path="res://Scripts/Enemies/mid_boss.gd" id="1_058nv"]
[ext_resource type="Texture2D" uid="uid://gpjl3fe36kjk" path="res://Graphics/Scratch/Ninja_Enemy.png" id="2_rjhlg"]
[ext_resource type="AudioStream" uid="uid://k1eiirxujg2q" path="res://Sound/SFX/jump.ogg" id="3_058nv"]
[ext_resource type="AudioStream" uid="uid://ceyvmo2y5nxkp" path="res://Sound/SFX/midboss_die.ogg" id="4_5r21t"]

[sub_resource type="Animation" id="Animation_rjhlg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:input_vector")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:flip_v")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1bi81"]
resource_name = "active"
length = 3.133335
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:input_vector")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53333336, 1.5666667, 2.1000001, 3.1333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(0, 0), Vector2(1, 0), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.53333336, 2.1000001),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"do_jump"
}, {
"args": [],
"method": &"do_jump"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.016666668, 1.0500001, 2.6166668),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_mll6g"]
resource_name = "dead"
length = 4.000002
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3.9833333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rjhlg"]
_data = {
&"RESET": SubResource("Animation_rjhlg"),
&"active": SubResource("Animation_1bi81"),
&"dead": SubResource("Animation_mll6g")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvkjh"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5r21t"]
size = Vector2(6, 10)

[sub_resource type="GDScript" id="GDScript_058nv"]
resource_name = "midboss_hurt_player"
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_body_entered(body: Node2D) -> void:
	if body is not Player:
		return
	
	var player: Player = body
	
	player.kill()
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_058nv"]
size = Vector2(2, 8)

[node name="MidBoss" type="CharacterBody2D" unique_id=264498372]
collision_layer = 0
script = ExtResource("1_058nv")

[node name="BossController" type="AnimationPlayer" parent="." unique_id=344489650]
libraries/ = SubResource("AnimationLibrary_rjhlg")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1885540983]
position = Vector2(0, -8)
texture = ExtResource("2_rjhlg")
flip_h = true
hframes = 4
vframes = 4
frame = 1

[node name="Camera2D" type="Camera2D" parent="." unique_id=1947668724]

[node name="boss_box" type="CollisionShape2D" parent="." unique_id=207407709]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_fvkjh")

[node name="JUMP" type="AudioStreamPlayer2D" parent="." unique_id=1750542856]
stream = ExtResource("3_058nv")

[node name="DIE" type="AudioStreamPlayer" parent="." unique_id=1267856387]
stream = ExtResource("4_5r21t")

[node name="HurtBox" type="Area2D" parent="." unique_id=456600480]
collision_layer = 0
collision_mask = 4

[node name="HurtBox" type="CollisionShape2D" parent="HurtBox" unique_id=1558041649]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_5r21t")

[node name="PlayerKillBox" type="Area2D" parent="." unique_id=131285484]
collision_layer = 4
script = SubResource("GDScript_058nv")

[node name="HitBox" type="CollisionShape2D" parent="PlayerKillBox" unique_id=1855462009]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_058nv")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="PlayerKillBox" to="PlayerKillBox" method="_on_body_entered"]
